<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/TagInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alarm_setter_height"
        android:hint="@string/alarm_daily" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/timeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/read_btn_back"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/dix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/timeButton"
            android:text="@string/dix_daily" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/ringSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </Spinner>

</LinearLayout>