<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/TagInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alarm_setter_height"
        android:hint="@string/Instant_Alarm" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dix_count_down" />

        <Button
            android:id="@+id/hourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <Button
            android:id="@+id/minuteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute" />

        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute" />
    </LinearLayout>

</LinearLayout>