<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/addAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/addAlarm"
        android:background="#fff000" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarmtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_alarm_tag" />

            <TextView
                android:id="@+id/alarmremark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_alarm_remark"
                android:visibility="visible" />

            <TextView
                android:id="@+id/alarmtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_alarm_time"
                android:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/alarmimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>