<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/Alarm_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#00ffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/alarmtag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_alarm_tag" />

        <TextView
            android:id="@+id/alarmremark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_alarm_remark"
            android:visibility="visible" />

        <TextView
            android:id="@+id/alarmtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_alarm_time"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/addAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/numAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_alarm_tag"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>